--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
-# Dev 4
-# Provides environment variable template for configuration of all services
+POSTGRES_DB=helperbot #бд
+POSTGRES_USER=helperbot
+POSTGRES_PASSWORD=helperbot
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+
+DATABASE_URL=postgresql+asyncpg://helperbot:helperbot@db:5432/helperbot
+
+BACKEND_HOST=0.0.0.0 #бэк
+BACKEND_PORT=8000
+
+
+TELEGRAM_BOT_TOKEN=dev-token #бот
+TELEGRAM_WEBHOOK_URL=
+
+BACKEND_BASE_URL=http://backend:8000 #бэк с ботом
+REQUEST_TIMEOUT_SECONDS=10
+
