--- a/.env
+++ b/.env
@@ -1,11 +1,18 @@
-POSTGRES_DB=helperbot
+POSTGRES_DB=helperbot #бд
 POSTGRES_USER=helperbot
 POSTGRES_PASSWORD=helperbot
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 
-BOT_TOKEN=123456789TOKEN #поменяйте на реальный токен
+DATABASE_URL=postgresql+asyncpg://helperbot:helperbot@db:5432/helperbot
 
-BACKEND_HOST=backend
+BACKEND_HOST=0.0.0.0 #бэк
 BACKEND_PORT=8000
+
+
+TELEGRAM_BOT_TOKEN=dev-token #бот
+TELEGRAM_WEBHOOK_URL=
+
+BACKEND_BASE_URL=http://backend:8000 #бэк с ботом
+REQUEST_TIMEOUT_SECONDS=10
 
