убрал заглушки, вставив токены и пароли, первое поднятие проекта через докер

--- a/.env
+++ b/.env
@@ -8,11 +8,14 @@ DATABASE_URL=postgresql+asyncpg://helperbot:helperbot@db:5432/helperbot
 
 BACKEND_HOST=0.0.0.0 #бэк
 BACKEND_PORT=8000
+DEBUG=true
 
-
-TELEGRAM_BOT_TOKEN=dev-token #бот
+TELEGRAM_BOT_TOKEN=8545124099:AAGJB_XPl1B_GOOC4wkaR8oxXL6QPVrnteY
+ #бот
 TELEGRAM_WEBHOOK_URL=
 
 BACKEND_BASE_URL=http://backend:8000 #бэк с ботом
 REQUEST_TIMEOUT_SECONDS=10
 
+# nginx (optional)
+NGINXPORT=8080
