--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,2 +1,37 @@
-# Dev 4
-# Configures Nginx as reverse proxy, handles SSL termination and webhook routing.
+worker_processes 1;
+
+events {
+  worker_connections 1024;
+}
+
+http {
+  include       /etc/nginx/mime.types;
+  default_type  application/octet-stream;
+
+  sendfile        on;
+  keepalive_timeout  65;
+
+  upstream backend_upstream {
+    server backend:8000;
+  }
+
+  server {
+    listen 80;
+
+    # Healthcheck
+    location = /healthz {
+      return 200 'ok';
+      add_header Content-Type text/plain;
+    }
+
+    # Proxy everything to backend by default (can be tightened later)
+    location / {
+      proxy_pass http://backend_upstream;
+      proxy_http_version 1.1;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+  }
+}
