--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     networks: [app-net]
 
   backend:
+    ports:
+      - "8000:8000"
     build:
       context: .
       dockerfile: backend/Dockerfile
