--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,20 @@
-POSTGRES_DB=helperbot #бд
-POSTGRES_USER=helperbot
-POSTGRES_PASSWORD=helperbot
-POSTGRES_HOST=db
-POSTGRES_PORT=5432
+# .env.example
+# Database
+DB_USER=postgres
+DB_PASSWORD=changeme
+DB_NAME=helper_bot
 
-DATABASE_URL=postgresql+asyncpg://helperbot:helperbot@db:5432/helperbot
+# Telegram
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 
-BACKEND_HOST=0.0.0.0 #бэк
-BACKEND_PORT=8000
-DEBUG=true
+# AI Providers
+OPENAI_API_KEY=your_openai_api_key_here
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
+PERPLEXITY_API_KEY=your_perplexity_api_key_here
 
-TELEGRAM_BOT_TOKEN=8545124099:AAGJB_XPl1B_GOOC4wkaR8oxXL6QPVrnteY #бот
-TELEGRAM_WEBHOOK_URL=
+# Backend
+SECRET_KEY=your_secret_key_for_encryption
+ENCRYPTION_KEY=your_32_byte_encryption_key_base64_encoded
 
-BACKEND_BASE_URL=http://backend:8000 #бэк с ботом
-REQUEST_TIMEOUT_SECONDS=10
-
-# nginx (optional)
-NGINXPORT=8080
+# Telegram Payments (for future)
+TELEGRAM_PAYMENT_PROVIDER_TOKEN=your_payment_provider_token
