--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,12 @@
-fastapi>=0.110
-uvicorn[standard]>=0.27
-pydantic>=2.6
-pydantic-settings>=2.2
-SQLAlchemy>=2.0
-asyncpg>=0.29
-alembic>=1.13
-httpx>=0.27
-python-dotenv>=1.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+alembic==1.12.1
+python-multipart==0.0.6
+pydantic==2.5.0
+pydantic-settings==2.1.0
+cryptography==41.0.7
+httpx==0.25.1
+openai==1.3.0
+python-dotenv==1.0.0
