--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,15 +1,14 @@
-FROM python:3.12-slim
-
-ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1
+FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY bot/requirements.txt /app/bot/requirements.txt
-RUN pip install --no-cache-dir -r /app/bot/requirements.txt
+RUN apt-get update && apt-get install -y \
+    gcc \
+    && rm -rf /var/lib/apt/lists/*
 
-COPY bot /app/bot
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-WORKDIR /app/bot
+COPY . .
 
 CMD ["python", "main.py"]
