--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,3 +1,6 @@
-aiogram>=3.4
-python-dotenv>=1.0
-httpx>=0.27
+aiogram==3.0.0
+aiohttp==3.9.1
+cryptography==41.0.7
+python-dotenv==1.0.0
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
