--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,37 +1,65 @@
-worker_processes 1;
-
 events {
-  worker_connections 1024;
+    worker_connections 1024;
 }
 
 http {
-  include       /etc/nginx/mime.types;
-  default_type  application/octet-stream;
-
-  sendfile        on;
-  keepalive_timeout  65;
-
-  upstream backend_upstream {
-    server backend:8000;
-  }
-
-  server {
-    listen 80;
-
-    # Healthcheck
-    location = /healthz {
-      return 200 'ok';
-      add_header Content-Type text/plain;
+    upstream backend {
+        server backend:8000;
     }
 
-    # Proxy everything to backend by default (can be tightened later)
-    location / {
-      proxy_pass http://backend_upstream;
-      proxy_http_version 1.1;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
+    upstream bot {
+        server bot:8080;
     }
-  }
+
+    server {
+        listen 80;
+        server_name _;
+        
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl http2;
+        server_name _;
+
+        # SSL certificates (to be added later)
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+        
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location /api/ {
+            proxy_pass http://backend/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            #WebSocket support for further stages
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+
+        # Bot webhook (for future stages)
+        location /webhook/ {
+            proxy_pass http://bot/webhook/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        
+        location /health {
+            proxy_pass http://backend/health;
+            access_log off;
+        }
+
+        location / {
+            return 404;
+        }
+    }
 }
