--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,6 +12,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-RUN chmod +x /app/scripts/init_db.py
+RUN if [ -f "/app/scripts/init_db.py" ]; then chmod +x /app/scripts/init_db.py; fi
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
